--- a/client/src/pages/Cart/CartPage.scss
+++ b/client/src/pages/Cart/CartPage.scss
@@ -148,6 +148,13 @@
         padding: 1.3rem;
         width: 90%;
     }
+
+    .event-cart-event-name-cont {
+        flex: 1;
+        padding-left: 0.5rem;
+        font-size: 1.4rem;
+        font-weight: 600;
+    }
 }
 
 
@@ -170,5 +177,12 @@
         border-radius: 1.5rem;
         padding: 1.2rem;
         width: 95%;
+    }
+
+    .event-cart-event-name-cont {
+        flex: 1;
+        padding-left: 0.5rem;
+        font-size: 1.3rem;
+        font-weight: 600;
     }
 }
