--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,17 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Henny+Penny&family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro&family=Smythe&display=swap'); */
+
+.stylysed{
+  font-family: 'Amatic SC';
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 
 .border-img {
   border-image-slice:
