--- a/client/src/pages/Proshow/Proshow.scss
+++ b/client/src/pages/Proshow/Proshow.scss
@@ -20,7 +20,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-image: url("https://ragam.co.in/noise_big.svg");
+    background-image: url("noise_big.svg");
     mix-blend-mode: screen;
     opacity: 18%;
     z-index: 5;
